fixed overlapping logo / menu for gem

--- a/gem/static/css/style.scss
+++ b/gem/static/css/style.scss
@@ -237,6 +237,7 @@ article {
         list-style: none;
         height: 46px;
         padding: 13px;
+        padding-left: 0;
         a {
           font-family: $font-family-avenir-ot;
           font-size: 14px;
